--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WHITELINEZ - Live Traffic Betting</title>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.svg" />
   <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body class="dark">
@@ -32,6 +34,7 @@
     <section class="stream-panel">
       <div class="stream-wrapper">
         <video id="live-video" muted playsinline autoplay></video>
+        <div class="feed-watermark-cover" aria-hidden="true"></div>
         <canvas id="detection-canvas" class="detection-overlay"></canvas>
         <canvas id="zone-canvas" class="zone-overlay"></canvas>
 
@@ -58,6 +61,17 @@
             <span class="cw-item"><svg class="vehicle-icon moto" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round"><circle cx="6" cy="17" r="3"></circle><circle cx="18" cy="17" r="3"></circle><path d="M6 17l5-6h4l3 6"></path><path d="M12 11l2-3h3"></path></svg><strong id="cw-motos">-</strong></span>
           </div>
           <div id="cw-ws-dot" class="cw-ws-dot cw-ws-err"></div>
+        </div>
+
+        <div id="ml-hud" class="ml-hud">
+          <p class="ml-hud-title">ML Signal</p>
+          <p id="ml-hud-msg" class="ml-hud-msg">Vehicle vision sharpens as more scenes are observed.</p>
+          <div class="ml-hud-stats">
+            <span><strong id="ml-hud-level">Warming up</strong></span>
+            <span>Samples: <strong id="ml-hud-frames">0</strong></span>
+            <span>Objects: <strong id="ml-hud-dets">0</strong></span>
+            <span>Confidence: <strong id="ml-hud-conf">-</strong></span>
+          </div>
         </div>
 
         <div id="round-strip" class="round-strip hidden">
@@ -173,6 +187,7 @@
   <script src="/js/zone-overlay.js"></script>
   <script src="/js/detection-overlay.js"></script>
   <script src="/js/floating-count.js"></script>
+  <script src="/js/ml-overlay.js"></script>
   <script src="/js/markets.js"></script>
   <script src="/js/bet.js"></script>
   <script src="/js/live-bet.js"></script>
