--- a/public/register.html
+++ b/public/register.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Register — WHITELINEZ</title>
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.svg" />
   <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body class="dark auth-page">
