--- a/public/index.html
+++ b/public/index.html
@@ -66,10 +66,10 @@
           <p class="ml-hud-title">ML Signal</p>
           <p id="ml-hud-msg" class="ml-hud-msg">Vehicle vision sharpens as more scenes are observed.</p>
           <div class="ml-hud-stats">
-            <span><strong id="ml-hud-level">Warming up</strong></span>
-            <span>Samples: <strong id="ml-hud-frames">0</strong></span>
-            <span>Objects: <strong id="ml-hud-dets">0</strong></span>
-            <span>Confidence: <strong id="ml-hud-conf">-</strong></span>
+            <span>L: <strong id="ml-hud-level">Warmup</strong></span>
+            <span>S: <strong id="ml-hud-frames">0</strong></span>
+            <span>O: <strong id="ml-hud-dets">0</strong></span>
+            <span>C: <strong id="ml-hud-conf">-</strong></span>
           </div>
         </div>
 
