--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
         </div>
 
         <div id="ml-hud" class="ml-hud">
-          <p class="ml-hud-title">ML Signal</p>
+          <p class="ml-hud-title">AI Learning</p>
           <p id="ml-hud-msg" class="ml-hud-msg">Vehicle vision sharpens as more scenes are observed.</p>
           <div class="ml-hud-stats">
             <span>L: <strong id="ml-hud-level">Warmup</strong></span>
