--- a/public/admin.html
+++ b/public/admin.html
@@ -109,7 +109,7 @@
 
               <div id="round-preview" class="round-preview hidden">
                 <div class="preview-row"><span>Duration</span><strong id="prev-duration">-</strong></div>
-                <div class="preview-row"><span>Avg zone vehicles (this hour)</span><strong id="prev-rate">-</strong></div>
+                <div class="preview-row"><span>Avg zone flow (this hour)</span><strong id="prev-rate">-</strong></div>
                 <div class="preview-row" id="prev-expected-row"><span>Expected for window</span><strong id="prev-expected">-</strong></div>
                 <div id="prev-warning" class="preview-warning hidden"></div>
                 <div id="prev-ok" class="preview-ok hidden">Round looks competitive</div>
