--- a/public/account.html
+++ b/public/account.html
@@ -16,7 +16,7 @@
       <a id="account-nav-admin" href="/admin.html" class="hidden">Admin</a>
       <a href="/index.html">Live</a>
       <a href="/account.html" class="active">Account</a>
-      <span class="nav-icon-btn" title="Profile">
+      <span class="nav-icon-btn nav-avatar-btn" title="Profile">
         <img id="account-header-avatar" class="nav-avatar" alt="Profile" />
       </span>
       <button id="btn-logout">Logout</button>
