--- a/public/admin.html
+++ b/public/admin.html
@@ -20,8 +20,8 @@
       <span class="admin-badge">Admin</span>
     </div>
     <nav class="admin-header-actions">
-      <a href="/index.html">Public View</a>
-      <button id="btn-logout">Logout</button>
+      <a href="/index.html" class="nav-link">Public View</a>
+      <button id="btn-logout" class="nav-icon-btn admin-logout-btn" title="Logout">Logout</button>
     </nav>
   </header>
 
